preferences on station
